--- a/eval.tex
+++ b/eval.tex
@@ -3,7 +3,7 @@
 We have seen in Figure~\ref{fig:design:shift-bottleneck:after} that \name can move the network queues to the \inbox to gain control over scheduling. 
 We now evaluate the following aspects of our design.
 \begin{enumerate}
-    \item Where to \name's performance benefits come from? We discuss this in the context of improving the flow completion times of \name's component flows.
+    \item Where do \name's performance benefits come from? We discuss this in the context of improving the flow completion times of \name's component flows.
     \item Can \name enforce different scheduling policies?
     \item Under what conditions do \name's performance benefits hold?
 \end{enumerate}
