--- a/intro.tex
+++ b/intro.tex
@@ -31,7 +31,7 @@ We, therefore, propose a new type of middlebox, called a \name, that (1) aggrega
 %\radhika{add a few lines on \name's high level architecture.} 
  A \name comprises of a pair of middleboxes: a \inbox that sits at the sender's egress and a \outbox that sits at the receiver's ingress. A bundle is, thus, defined as a group of flows traversing through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox for (i) classifying the flows into appropriate bundles, and,  (ii) collecting congestion signals, such as the round-trip time, and the rate at which traffic arrives at the \outbox. These signals are used by a standard congestion control algorithm (having certain properties, as described later) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck links in the network remain fully utilized. 
  
- We introduce a novel light-weight methodology for the \inbox and \outbox coordination, which does not require any per-flow state (only requiring per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our overall approach only requires introducing the \name boxes at the customer's edges, and requires no changes to the individual end-hosts or to the routers in the public Internet. 
+ We introduce a novel light-weight methodology for the \inbox and \outbox coordination, which does not require any per-flow state (only requiring per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our overall approach only requires introducing the \name boxes at the customer's edge, and requires no changes to the individual end-hosts (unless needed for a specific scheduling policy \eg adding priority values to packet headers) or to the routers in the network. 
  
  Notice that our goal is to only do scheduling and queue management across the traffic within the same bundle (and therefore belonging to a single customer). We do not even attempt to tackle the more ambitious objective of  scheduling traffic across different customers, which would require dealing with the potential differences in their requirements. Furthermore, as we will discuss later, there can be instances where \name fails to provide any performance benefits for the bundled traffic, and falls back to the status quo performance. Nonetheless, we believe that our work, in its simplicity, provides an \emph{immediately deployable} solution for enabling some of the benefits of scheduling and queue management in the public Internet, which is something that has been missing from the scheduling literature so far. 
  %\radhika{should i move it up by 2 paragraphs (i.e. right after the 3 points)?} 
