--- a/abstract.tex
+++ b/abstract.tex
@@ -1,12 +1,12 @@
 \begin{abstract}
 
 %While multiple scheduling and queue management algorithms have been proposed in the past, very few have been implemented in today's routers and even fewer have enabled by, and used effectively, by the public network operators. 
-Public Internet has not been able to enjoy the benefits of scheduling and queue management policies, due to two primary reasons: (i) network operators are unable to choose appropriate policies due to lack of visibility into individual customer's traffic, and (ii) customer's are unable to enforce their desired policies due to lack of control over congested queue-up links in the middle of the network. To address this issue, we propose a new kind of middlebox, called a \name, which sits at a customer's edge, and bundles together the group of flows that have common origin and destination domains. \name allows the customers to unilaterally enforce scheduling and queue management policies across the flows within each bundle based on their own requirements. It does so by doing rate control for each bundle, such that the queuing induced by its traffic is \emph{moved from the middle of the network to itself.  
+Public Internet has been unable to enjoy the benefits of scheduling policies, due to two primary reasons: (i) network operators are unable to choose appropriate policies due to lack of visibility into individual customer’s traffic, and (ii) customers are unable to enforce their desired policies due to lack of control over queue-up links in the middle of the network. To address this issue, we propose a new kind of middlebox, called a \name, which sits at a customer’s edge, and bundles together groups of flows having common origin and destination domains. It does rate control for each bundle, such that the queuing induced by its traffic is moved from the middle of the network to the \name itself. This, therefore, brings the network queues under customers’ control, allowing them to unilaterally enforce their desired policies on the traffic. \name has an immediately deployable, light-weight design, which we implement in only $\sim1500$ lines of code, and that can be used to effectively enforce different scheduling policies. Our evaluation, on a variety of emulated scenarios, shows that scheduling via \name can result in up to \an{double check for more recent numbers: 62\%} improvement in median flow completion time compared to the status quo.
 
-It does 
+%It does 
 %This works by shifting the network bottleneck from the middle of the network, where it is difficult to enforce policies, to the edge (\ie the \name), where it is easy to do so.
 
-We propose a design of a \name which is flexible, scalable, compatible with hardware implementations, simple (we implement it in approximately $1500$ lines of code) and can yield up to a \an{double check for more recent numbers: 62\%} improvement in median flow completion time (FCT).
+%Our proposed design for a \name is flexible, scalable, compatible with hardware implementations, simple (we implement it in approximately $1500$ lines of code) and can yield up to a \an{double check for more recent numbers: 62\%} improvement in median flow completion time (FCT).
 
 % We propose a new kind of middlebox, called a \name, which manages \emph{traffic aggregates}, or a group of flows with a common origin domain and destination domain. \name can allow senders of traffic aggregates to unilaterally impose scheduling policy on component flows. This works by shifting the network bottleneck from the middle of the network, where it is difficult to enforce policies, to the edge (\ie the \name), where it is easy to do so.
 
