--- a/intro.tex
+++ b/intro.tex
@@ -15,18 +15,19 @@ This is primarily due to the challenging position of operators in the public Int
 %\radhika{similar issue arises with our bundler too...}.
 Thus, due to limited visibility into their customers' traffic, network operators cannot choose policies that can appease them all. 
 
-An individual customer can, on the other hand, choose appropriate scheduling and AQM policies for the \emph{component flows} within its own traffic as per its own requirements. 
+An individual customer can, on the other hand, choose appropriate policies for the \emph{component flows} within its own traffic as per its own requirements. 
 %; that is, scheduling policy is easier to express at the edge. 
-Examples include traffic over the public Internet between different datacenters, between campuses of an organization, collaborating universities or companies, between large content provider (\eg Netflix) and a network with many clients (e.g., a regional ISP), large-scale data backups from an organization to an external site (\eg Dropbox), and so on. 
-In each of these scenarios the sender has enough information to unilaterally choose a scheduling or queue management policy for its component flows (such as prioritizing flows based on their application types, enforcing fair queueing, using AQM to achieve a delay target, and so on). However, these policies are effective only when enforced on congested bottleneck links in a flow's path that experience a queue build-up, and such links are often outside the control of the individual customers~\cite{inferring-interdomain-congestion}. 
+Examples include traffic between different datacenters, campuses of an organization, collaborating institutes, a large content provider (\eg Netflix) and a network with many clients (e.g., a regional ISP), an organization using an external service (\eg Dropbox), and so on. 
+In each of these scenarios the sender has enough information to unilaterally choose a scheduling or queue management policy for its component flows (such as prioritizing flows based on applications, enforcing fair queueing, using AQM to bound delays, and so on). However, these policies are effective only when enforced on congested links in a flow's path that experience a queue build-up, and such links are often outside the control of the individual customers~\cite{inferring-interdomain-congestion}. 
 
 So while network operators do not have enough visibility into the traffic to choose an appropriate policy, the customers may not have enough control over the queued-up links in the network to enforce their desired policies. This paper attempts to resolve this conundrum by simply \emph{moving the queues built in the network to the customer's edge}, such that appropriate scheduling and queue management policies can be effectively enforced. The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
 
-We begin with the observation that component flows of the traffic from a given sender's domain and destined for the same downstream domain, as in the examples mentioned earlier, are likely to share common bottlenecks within the network. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle at the egress to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network to the sender's egress itself. \radhika{is the last sentence too long / hard to understand? suggestions for fixing it?} 
+We observe that the component flows of the traffic from a given sender's domain, destined for the same downstream domain, as in the examples mentioned earlier, are likely to share common bottlenecks within the network. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
+%\radhika{is the last sentence too long / hard to understand? suggestions for fixing it?} 
 
 We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of an enterprise network or a domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They thus provide an effective vantage point for aggregating and managing traffic. 
 
-We, therefore, propose a new type of middlebox, called a \name, that (1) aggregates the traffic at the customer's egress into appropriate bundles whose component flows share a common receiver domain, (2) does rate control for each bundle to shift the corresponding queues from within the network to itself, and (3) applies scheduling and queue management policies within each bundle as per the customer's requirements. 
+We, therefore, propose a new type of middlebox, called a \name, that (1) aggregates the traffic at the customer's egress into appropriate bundles, (2) does rate control for each bundle to shift the corresponding queues from within the network to itself, and (3) applies scheduling and AQM policies within each bundle as per the customer's requirements. 
 
 %\radhika{add a few lines on \name's high level architecture.} 
  A \name comprises of a pair of middleboxes: a \inbox that sits at the sender's egress and a \outbox that sits at the receiver's ingress. A bundle is, thus, defined as a group of flows traversing through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox for (i) classifying the flows into appropriate bundles, and,  (ii) collecting congestion signals, such as the round-trip time, and the rate at which traffic arrives at the \outbox. These signals are used by a standard congestion control algorithm (having certain properties, as described later) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck links in the network remain fully utilized. 
