--- a/graphs/varying-offered-load.Rnw
+++ b/graphs/varying-offered-load.Rnw
@@ -25,7 +25,7 @@ ggplot(df, aes(
             "nobundler_fifo" = "Baseline",
             "copa_sfq" = "Bundler"
         ),
-        scale_name=NULL, name=NULL,
+        scale_name=NULL, name=NULL
     ) +
     coord_cartesian(ylim=c(1,1.5)) +
     theme_minimal() + 
