--- a/twobundler.tex
+++ b/twobundler.tex
@@ -1,10 +1,9 @@
 \begin{figure}
     \centering
 \begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/robust:twobundler-1} 
 
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in ggproto(NULL, super, call = match.call(), aesthetics = aesthetics, : argument is missing, with no default}}\end{kframe}
 \end{knitrout}
     \caption{Competing traffic bundles. Each bundle observes improved median FCT compared to its performance in the baseline scenario.}
     \label{fig:robust:twobundler}
