--- a/eval.tex
+++ b/eval.tex
@@ -143,7 +143,7 @@ Note that due to the effect discussed above, using FIFO scheduling results in hi
     \1 Experiment: backlogged iperf flows are in a lower priority queue and interactive ETG flows are in a high priority queue.
 \end{outline}
 
-\radhika{need to further clean this.}
+%\radhika{need to further clean this.}
 
 \subsection{Terminating TCP Connections}\label{s:eval:proxy}
 An alternate implementation choice for a \name would use a TCP proxy to terminate connections at the \inbox. 
