--- a/design.tex
+++ b/design.tex
@@ -12,19 +12,7 @@
     \caption{This illustrative example with a single flow shows how \name can take control of queues in the network. The bubbles show the trend in measured queueing delays at the relevant queue over time. The queue where delays build up can best make scheduling decisions, since that is where there is the most choice between packets to send.}\label{fig:design:shift-bottleneck}
 \end{figure}
 
-\an{
-Scheduling traffic within a \emph{bundle}, or a group of component flows for which some entity (the ``customer'') can unilaterally determine scheduling policy, is useful when the aggregate comprises enough offered load to congest the network. 
-In one case, the queue where this congestion occurs could reside in the same network \an{maybe ``autonomous system'' is more precise} as the customer. 
-In this case, the customer can deploy scheduling policy in its own network. Examples of this case are private WAN networks~\cite{bwe, swan}.
-
-In the other case, the congested queue resides outside the customer's control. This scenario is where \name offers benefits.
-We argue that lack of customer control over bottleneck links is prevalent; recent work has show that inter-domain congestion occurs frequently~\cite{inferring-interdomain-congestion}.
-However, this case presents a challenge: 
-
-Of course, traffic from other customers may also compete for a share of this bottleneck link. Because \name acts to enforce the policy of a single customer, it naturally can control only that customer's traffic.
-Therefore, \name's scheduling benefits will come from the \emph{self-inflicted} queueing the component flows cause.
-}
-
+\cut{
 A \name must have the following properties:
 \cut{ 
 % these items could be considered implementation details
@@ -37,25 +25,34 @@ A \name must have the following properties:
     \item It must be deployable, therefore, it cannot rely on changes in end-hosts.
     \item It must be capable of deployments on the edge of a domain. Therefore, it must also scale to high link rates. As a result, it should not maintain per-connection state -- only per-aggregate state. \radhika{shorten}
 \end{enumerate}
-\radhika{Need a transition line: ``The rest of this section discusses .....''}
+\radhika{Need a transition line: ``The rest of this section discusses .....''} 
+}
 
-\subsection{Shifting the Queues}\label{s:design:shifting}
+%\subsection{Shifting the Queues}\label{s:design:shifting}
 
-The key insight of \name is that shifting the queues from the bottleneck to the edge enables scheduling for the aggregate.
-Note that \name can only shift (and therefore can only schedule) the component of the bottleneck queue which is self-inflicted; that is, it can only control its own traffic.
-\name must therefore decide what fraction of the bottleneck queue it is willing to occupy.
-We make a simple, but powerful, observation: end-host congestion control algorithms perform exactly this calculation!
-If we run a congestion control algorithm at the \name, it will decide on a fair sending rate for the aggregate as it competes with non-aggregate traffic from other domains.
-Component flows will then queue at the \name as their packets are sent at this rate.
-Figure~\ref{fig:design:shift-bottleneck} illustrates this method: 
-in Figure~\ref{fig:design:shift-bottleneck:before}, packets from the end-hosts queue in a FIFO queue in the network. The FIFO queue at the edge is unoccupied.
-In contrast, the \name implementation in Figure~\ref{fig:design:shift-bottleneck:after} (described in \S\ref{s:impl}) maintains low queueing delays at the bottleneck queue by estimating and sending at the bottleneck rate. 
-Since component flows, running traditional congestion control algorithms, will probe for bandwidth until they experience loss, they build queues at the \name instead of at the bottleneck.
-Since the \name now controls the queues corresponding to the traffic aggregate, it can schedule the packets of component flows.
+%The key insight of \name is that shifting the queues induced by a traffic bundle from the bottleneck to the sender's edge enables the sender to schedule the traffic within the bundle appropriately. Notice that \name can only shift (and therefore can only schedule) the component of the bottleneck queue which is self-inflicted by the traffic in a given bundle. 
 
-\radhika{maybe add a subsection on choice of congestion control at \name. Potential outline below.}
+A trivial strategy for inducing queuing at the \name, for effective scheduling of traffic within a bundle, is to throttle the outgoing rate of the bundle to a small value. However, this would adversely affect the performance of the bundled traffic, by reducing its share of bandwidth in the network, and potentially leaving the bottleneck links under-utilized. Instead, the rate needs to be set such that bottleneck links remain fully utilized and the bundled traffic competes fairly with the cross traffic from other domains. 
+%In order to prevent under-utilization of the bottleneck links in the network, \name needs to occupy . 
+We make a simple, but powerful, observation: congestion control algorithms perform exactly this calculation! 
+If we run an appropriate congestion control algorithm (as discussed later in \S\ref{s:design-choices}) at the \name, it will decide on a fair sending rate for each of its bundles as they compete with traffic from other domains. 
+%Component flows of the bundles will then queue at the \name as their packets are sent at this rate.
+%Since component flows, running traditional congestion control algorithms, will probe for bandwidth until they experience loss, they build queues at the \name instead of at the bottleneck.
+%Since the \name now controls the queues corresponding to the traffic aggregate, it can schedule the packets of component flows. \radhika{needs fixing!}
 
-\subsection{Choice of congestion control algorithm}
+Figure~\ref{fig:design:shift-bottleneck} illustrates this method for a single flow traversing a bottleneck link in the network: in Figure~\ref{fig:design:shift-bottleneck:before}, packets from the end-hosts are queued in the network, while the queue at the edge is unoccupied. In contrast, the \name implementation in Figure~\ref{fig:design:shift-bottleneck:after} (described in \S\ref{s:impl}) maintains low queuing delays at the bottleneck queue by estimating and sending at the bottleneck rate. 
+
+The rest of this section discusses our design choices for \name (\S X), and ends with a note on the regime in which \name works the best (\S X)
+
+
+\subsection{Design Choices}
+\label{s:design-choices}
+
+Ease of deployability main guiding factor....
+
+%\radhika{maybe add a subsection on choice of congestion control at \name. Potential outline below.}
+
+\Para{Choice of congestion control algorithm}
 Choice of CC is important. Must have following properties:
 \begin{itemize}
     \item Is not loss-based. Two reasons (ii) Goal is to maintain small queuing delays in the network. (ii) Cannot double penalize. Delay-based CC most suited.
@@ -112,30 +109,28 @@ both the same inbox and outbox on their way from source to destination,
 must 
 }
 
-\subsection{Two-sided Measurement}\label{s:design:twosided}
+\Para{Two-sided Measurement}\label{s:design:twosided}
 To perform congestion control, \name must collect and maintain measurements about the current state of the network.
 Traditionally, end-host congestion control has been tightly integrated with end-host packet transmission logic. 
 Therefore, algorithms have been built on those measurements that are readily available on end-hosts, \eg the number of in-order packets acknowledged by the receiver.
 
 From the vantage point of a \name, however, there are three problems with this traditional approach.
 
-\paragrapha{Scalability} To track measurements in the same manner as an end-host, \name would need to maintain per-flow state: remembering when it sent each packet, and matching these records with the stream of incoming packet acknowledgements. 
+\paragraphi{Scalability} To track measurements in the same manner as an end-host, \name would need to maintain per-flow state: remembering when it sent each packet, and matching these records with the stream of incoming packet acknowledgements. 
 This violates requirement (3): it requires stateful operations at high line rates \radhika{any citation on why stateful difficult?}. \fc{fq is keeping per-flow state}
 
-\paragrapha{Measurement semantics} Finally, with a bundle of connections, there may not be a single meaningful end-to-end ``round-trip time'' in this scenario, as each component flow may experience different sources of latency after traversing the shared bottleneck, and thus experience different end-to-end RTTs. 
+\paragraphi{Measurement semantics} Finally, with a bundle of connections, there may not be a single meaningful end-to-end ``round-trip time'' in this scenario, as each component flow may experience different sources of latency after traversing the shared bottleneck, and thus experience different end-to-end RTTs. 
 Rather, we want to measure the RTT between the middlebox we have shifted the bottleneck to and a fixed point (per-bundle) on the opposite site of the bottleneck.
 \an{Further, sender-side measurements of the bottleneck rate have long been known to have limited accuracy~\cite{packet-dynamics, path-properties}.}
 \radhika{needs more clarity / explicitness}
 
-\paragrapha{Reliance on acknowledgements} Internet paths can be asymmetric and component traffic may be UDP-based; as a result, \name may not observe packet acknowledgements. Therefore, relying on packet acknowledgements to gather path information is a brittle approach.
-%
-\smallskip
+\paragraphi{Reliance on acknowledgements} Internet paths can be asymmetric and component traffic may be UDP-based; as a result, \name may not observe packet acknowledgements. Therefore, relying on packet acknowledgements to gather path information is a brittle approach.
 
 To address these challenges, \name consists of a \emph{pair} of middleboxes, both on the network path: one before the bottleneck, and one after, which we refer to as the \textit{\inbox} and \textit{\outbox}, respectively. 
 This allows for a direct calculation of the receive rate at the \outbox and a well-defined RTT: the RTT between the two middleboxes as opposed to the source and destination. 
 As long as the bottleneck exists between the middleboxes, these measurements can sufficiently capture the important network conditions. 
 However, if it is not, then \name will not be able to build queues and control the traffic. Thus, middlebox placement is important. The \inbox and \outbox should be placed as close to the edge near the sources and destinations as possible in order to capture the bottleneck between them.
-\radhika{highlight trade-off}
+\radhika{highlight trade-off} \radhika{shrink!}
 
 \cut{
 We imagine an infrastructure, as depicted in Figure~\ref{fig:overview}, where each 
@@ -150,32 +145,40 @@ We take advantage of this property in our approach to dynamic bundle identificat
 \fc{might make sense to add this to design requirements/constraints}
 }
 
-\subsection{Out-of-band Coordination}\label{s:design:oob}
+\Para{Out-of-band Coordination}\label{s:design:oob}
 Each paired \inbox and \outbox must communicate in order to share measurements and coordinate actions. 
 This communication could either be in-band, \ie would encapsulate packets
 at the \inbox with a custom header and then decapsulate them at the \outbox, or out-of-band,
 which would not modify the packets of component flows.
 While past approaches to network-assisted congestion control have used an in-band approach, in this scenario it would add three implementation complications without any clear benefit:
 
-\paragrapha{Fault tolerance} Encapsulation would require the \inbox and \outbox to work together. 
+\paragraphi{Fault tolerance} Encapsulation would require the \inbox and \outbox to work together. 
 If a decapsulating outbox were to fail, as middleboxes often do~\cite{aplomb}, encapsulated flows would also fail.
 Rather, with an out-of-band feedback approach and a ``fail-open'' deployment model, both the \inbox and \outbox could fail with no adverse effects to component traffic (other than the loss of \name's benefits). We discuss our approach to fault tolerance in the out-of-band model in~\S\ref{s:measure:loss}.
 
-\paragrapha{Performance overhead} Encapsulation requires rewriting each packet at both the \inbox and \outbox. 
+\paragraphi{Performance overhead} Encapsulation requires rewriting each packet at both the \inbox and \outbox. 
 This adds overhead both in terms of the CPU cycles necessary to modify the packet and in terms of the extra data sent on the wire, and therefore limits scalability compared to an out-of-band approach. 
 
-\paragrapha{ECMP} Equal-cost multi-path routing (ECMP) load balances flows across different paths based on their 5-tuple. 
+\paragraphi{ECMP} Equal-cost multi-path routing (ECMP) load balances flows across different paths based on their 5-tuple. 
 A naive implementation of encapsulation that chose a single 5-tuple for the decapsulator would force flows onto a single path that would have otherwise benefited from load balancing. 
 To regain ECMP's benefits, an encapsulating \name would need to carefully set the source and destination ports such that the distribution of paths traversed by the encapsulated flows matches those that the unmodified traffic would have traversed without encapsulation. 
 
 Therefore, we select an out-of-band approach. Flows from the senders traverse the network exactly as they otherwise would have.
 \radhika{not all encap/decap will lead to these issues, so need to be more explicit. also, why is this interesting to discuss (e.g. is there a trade-off between in-band and out-band, or is the latter unanimously better)?}
 \fc{we do oob for these reasons which requires solving some challenges that we discuss in the next section}
+\radhika{also, shrink!}
 
-\subsection{Defence Wall}
-\radhika{placeholder title}
+\subsection{Favorable Operation Regime for \name}
 
-\begin{itemize}
-    \item Favourable conditions in which bundler works.
-    \item Difference between scheduling between bundle and scheduling across bundle -- we donot explicitly deal with latter. 
-\end{itemize}
+
+Scheduling traffic within a \emph{bundle}, or a group of component flows for which some entity (the ``customer'') can unilaterally determine scheduling policy, is useful when the aggregate comprises enough offered load to congest the network. 
+In one case, the queue where this congestion occurs could reside in the same domain as the customer. 
+In this case, the customer can deploy scheduling policy in its own network. Examples of this case are private WAN networks~\cite{bwe, swan}.In the other case, the congested queue resides outside the customer's control. This scenario is where \name offers benefits.
+
+%We argue that lack of customer control over bottleneck links is prevalent; recent work has show that inter-domain congestion occurs frequently~\cite{inferring-interdomain-congestion}.
+%However, this case presents a challenge: 
+
+Of course, traffic from other customers may also compete for a share of this bottleneck link. Because \name acts to enforce the policy of a single customer, it naturally can control only that customer's traffic.
+Therefore, \name's scheduling benefits will come from the \emph{self-inflicted} queueing the component flows cause.
+
+
