--- a/intro.tex
+++ b/intro.tex
@@ -9,18 +9,19 @@ The vast literature on scheduling and queue management algorithms~\cite{diffserv
 Although router vendors have, over the years, implemented certain schemes (such as strict priorities, round-robin for fair queueing, and active queue management~\cite{cisco-qos}), they are often not enabled, or used effectively, by the network operators. 
 %\radhika{edit, more than not being enabled, they cannot be enforced effectively}
 %Meanwhile, in privately operated wide-area networks, operators have used simple scheduling policies in the core to reap significant gains~\cite{b4, bwe, swan}. 
-This is primarily due to the challenging position of operators in the public Internet, where each of their customers may desire diverging, and often incompatible, features. For example, while enabling fair queueing in the routers would benefit short interactive flows competing with bulk transfers, it may penalize flows bundled within a single VPN tunnel by allocating them smaller than their fair share of bandwidth \radhika{might need to change this example}. 
+This is primarily due to the challenging position of public network operators, where each of their customers may desire diverging, and often incompatible, features. While Netflix might prefer enforcing fairness across its video traffic, Amazon might prefer prioritizing its interactive web store traffic over the long-lived AWS transfers.
+%For example, while enabling fair queueing in the routers would benefit short interactive flows competing with bulk transfers, it may penalize flows bundled within a single VPN tunnel by allocating them smaller than their fair share of bandwidth \radhika{might need to change this example}. 
 %Similarly, while enabling an AQM scheme might reduce the queuing delay in the absence of a BBR flow, it may severely penalize non-BBR flows that compete with BBR. (include if we find a citation). 
 %\radhika{something about not knowing how to apply policies across customers}
 %\radhika{similar issue arises with our bundler too...}.
-Thus, due to limited visibility into their customers' traffic, network operators cannot choose policies that can appease them all. 
+Thus, due to limited visibility into their customers' traffic, network operators cannot choose policies that can appease them all.\footnote{Our work focuses on public networks. The case for private WANs is different, since they are owned by a single entity, and have, thus, been successful in exploiting the benefits of scheduling~\cite{swan, b4, bwe}.} 
 
 An individual customer can, on the other hand, choose appropriate policies for the \emph{component flows} within its own traffic as per its own requirements. 
 %; that is, scheduling policy is easier to express at the edge. 
 Examples include traffic between different datacenters, campuses of an organization, collaborating institutes, a large content provider (\eg Netflix) and a network with many clients (e.g., a regional ISP), an organization using an external service (\eg Dropbox), and so on. 
 In each of these scenarios the sender has enough information to unilaterally choose a scheduling or queue management policy for its component flows (such as prioritizing flows based on applications, enforcing fair queueing, using AQM to bound delays, and so on). However, these policies are effective only when enforced on congested links in a flow's path that experience a queue build-up, and such links are often outside the control of the individual customers~\cite{inferring-interdomain-congestion}. 
 
-So while network operators do not have enough visibility into the traffic to choose an appropriate policy, the customers may not have enough control over the queued-up links in the network to enforce their desired policies. This paper takes preliminary steps towards resolving this conundrum by simply \emph{moving the queues built in the network to the customer's edge}. Our approach, thus, allows the customers to effectively enforce of desired scheduling and queue management policies across traffic that share common sender and receiver domains. The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
+So while network operators do not have enough visibility into the traffic to choose an appropriate policy, the customers may not have enough control over the queued-up links in the network to enforce their desired policies. This paper takes preliminary steps towards resolving this conundrum by simply \emph{moving the queues built in the network to the customer's edge}. Our approach, thus, allows customers to effectively enforce their desired scheduling and queue management policies, across traffic that share common sender and receiver domains, by bringing the corresponding queues under their control. The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
 
 We observe that the component flows of the traffic from a given sender's domain, destined for the same downstream domain, as in the examples mentioned earlier, are likely to share common bottlenecks within the network. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
 %\radhika{is the last sentence too long / hard to understand? suggestions for fixing it?} 
