Updates from ShareLaTeX

--- a/deployment.tex
+++ b/deployment.tex
@@ -1,4 +1,29 @@
 \section{Motivating Scenarios}
 \label{s:deploy}
+\radhika{need a better title?}
 
+\name provides benefits over status quo, when the following conditions are met:
+
+\Para{Opportunities for bundling traffic}
+\begin{itemize}
+    \item Cite venkat's hotnets and Labovitz paper (any other citations?)
+\end{itemize}
+
+\Para{Bottleneck in the middle of the network}
+Can arise due to following:
+\paragraphi{When carriers do rate limit}
+Find citations
+\begin{itemize}
+    \item can result in self-inflicted bottlenecks (any citations to show how common this is?).
+    \item best case for bundler.
+\end{itemize}
+
+\paragraphi{Congestion from other traffic}
+\begin{itemize}
+    \item short-lived (up to a few MB) cross traffic: we still get benefits.
+    \item other bundled traffic: we still get benefits.
+    \item long-lived persistent connections: fall back to status quo.
+\end{itemize}
+
+\Para{Bottleneck is shared by the bundled traffic}
 
