--- a/related.tex
+++ b/related.tex
@@ -8,9 +8,11 @@ Our work sits at the unique intersection of three popular areas: scheduling, con
 %However, since queuing still occurs in the middle of the network, it relies on the customers targeting a common global objective, or on the network operators isolating different customers' traffic, both of which are difficult to realize. 
 but it also requires a new router hardware. \name, with its more tractable goals, provides a solution that is far easier to deploy. 
 
-\Para{Aggregating congestion information} A recent proposal~\cite{fivecomps} makes the observation that majority of today's traffic is owned by a few entities, and that a single entity might have a large number of flows traversing the same bottleneck link. This observation ties in well with our model, implying that we can expect to have a small number of bundles across the Internet, each with large amounts of traffic, resulting in greater scheduling opportunities within a bundle. Note that the proposal uses its observation to highlight the benefits sharing information across a single customer's traffic when configuring congestion control algorithms at the endhosts. This is orthogonal to our goal of doing effective scheduling across such traffic by introducing a new middlebox as a choke-point, without touching individual endhosts. 
+\Para{Aggregating congestion information} A recent proposal~\cite{fivecomps} observes that majority of today's traffic is owned by a few entities.
+%, and that a single entity might have a large number of flows traversing the same bottleneck link. 
+This observation ties in well with our model, implying that we can expect to have a small number of bundles across the Internet, each with large amounts of traffic, resulting in greater scheduling opportunities within a bundle. Note that the proposal uses its observation to highlight the benefits sharing information across a single customer's traffic when configuring congestion control algorithms at the endhosts. This is orthogonal to our goal of doing effective scheduling across such traffic by introducing a new middlebox as a choke-point, without touching individual endhosts. 
 
-\Para{TCP Proxy} This is the middlebox that can be considered to be most closely related to \name. It splits the TCP connections traversing it, such that the senders observe a smaller round-trip time and the flows ramp up faster. Since it ends and re-establishes the TCP connections, it requires implementing full TCP stacks, managing per-connection state and intrusively changing the packet headers. Again, \name has orthogonal (yet, complementary) goals, which allow for a light-weight implementation, without requiring any per-connection state (unless needed for a specific scheduling algorithm) or any modifications to the packets traversing it. We show how combining \name's features with a TCP Proxy can lead to further improvements in performance in \S\ref{s:eval:proxy}. 
+\Para{TCP Proxy} This is the middlebox that can be considered to be most closely related to \name. It splits the TCP connections traversing it, such that the senders observe a smaller round-trip time and the flows ramp up faster. Since it terminates and re-establishes TCP connections, it requires implementing full TCP stacks, managing per-connection state and intrusively changing the packet headers. Again, \name has orthogonal (yet, complementary) goals, which allow for a light-weight implementation, without requiring any per-connection state (unless needed for a specific scheduling algorithm) or any modifications to the packets traversing it. We show how combining \name's features with a TCP Proxy can lead to further improvements in performance in \S\ref{s:eval:proxy}. 
 
 %\Para{VPN tunneling} 
 
