--- a/measure.tex
+++ b/measure.tex
@@ -112,10 +112,10 @@ The same argument applies to the loss of feedback messages.
 Importantly, \inbox calculates both the send and receive epoch based on information
 from the \outbox rather than attempting to reach consensus on individual epoch boundaries with the \outbox. 
 
-\paragrapha{Crashes \an{need better heading}} Existing work~\cite{ftmb} has studied how to design stateful middleboxes to be fault-tolerant with acceptable performance overheads. 
-However, state-persistence is largely unnecessary for \name.
-\name only stores network conditions, which it can re-learn within a few RTTs, and bundle membership flow tables, which it can re-discover as we describe in~\S\ref{s:impl:discovery}. 
-\radhika{maybe move elsewhere}
+% \paragrapha{Crashes \an{need better heading}} Existing work~\cite{ftmb} has studied how to design stateful middleboxes to be fault-tolerant with acceptable performance overheads. 
+% However, state-persistence is largely unnecessary for \name.
+% \name only stores network conditions, which it can re-learn within a few RTTs, and bundle membership flow tables, which it can re-discover as we describe in~\S\ref{s:impl:discovery}. 
+% \radhika{maybe move elsewhere}
 
 \subsection{Choosing The Epoch Size}
 \label{s:measure:epoch}
