--- a/deployment.tex
+++ b/deployment.tex
@@ -1,6 +1,8 @@
-\section{Motivating Scenarios}
+\section{Deployment Scenarios}
 \label{s:deploy}
 \radhika{need a better title?}
+
+\radhika{outline:/*}
 
 \name provides benefits over status quo, when the following conditions are met:
 
@@ -11,7 +13,8 @@
 
 \Para{Bottleneck in the middle of the network}
 Can arise due to following:
-\paragraphi{When carriers do rate limit}
+
+\paragraphi{When carriers do rate limiting}
 Find citations
 \begin{itemize}
     \item can result in self-inflicted bottlenecks (any citations to show how common this is?).
@@ -26,4 +29,4 @@ Find citations
 \end{itemize}
 
 \Para{Bottleneck is shared by the bundled traffic}
-
+\radhika{*/}
