Updates from ShareLaTeX

--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -1,4 +1,4 @@
-\documentclass[format=sigconf,10pt,natbib=false,authordraft]{acmart}
+\documentclass[format=sigconf,10pt,natbib=false,top=1in,bottom=0.8in,authordraft]{acmart}
 \usepackage{geometry}
 %\headheight 0pt
 %\textheight 9.25in
@@ -10,6 +10,7 @@
 
 % remove the annoying header on each page
 \fancyhead{}
+\usepackage[subtle]{savetrees}
 
 \input{packages}
 %\captionsetup[figure]{belowskip=-5pt, aboveskip=5pt}
