--- a/intro.tex
+++ b/intro.tex
@@ -4,38 +4,44 @@
 %\radhika{Alternate intro: mostly just changed the flow of certain points, removed some that might be better suited in related work, and made some more concrete/specific. /*}
 
 %lots of scheduling algorithms proposed. scheduling used in private wans. seems clearly beneficial.
-The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the performance benefits of deploying such schemes within the network. However, the Internet has, at large, been unable to enjoy these benefits. 
 
-Although router vendors have, over the years, implemented certain schemes (such as strict priorities, round-robin for fair queueing, and active queue management~\cite{cisco-qos}), they are often not enabled, or used effectively, by the network operators. 
-%\radhika{edit, more than not being enabled, they cannot be enforced effectively}
-%Meanwhile, in privately operated wide-area networks, operators have used simple scheduling policies in the core to reap significant gains~\cite{b4, bwe, swan}. 
-This is primarily due to the challenging position of public network operators, where each of their customers may desire diverging, and often incompatible, features. While Netflix might prefer enforcing fairness across its video traffic, Amazon might prefer prioritizing its interactive web store traffic over the long-lived AWS transfers.
-%For example, while enabling fair queueing in the routers would benefit short interactive flows competing with bulk transfers, it may penalize flows bundled within a single VPN tunnel by allocating them smaller than their fair share of bandwidth \radhika{might need to change this example}. 
-%Similarly, while enabling an AQM scheme might reduce the queuing delay in the absence of a BBR flow, it may severely penalize non-BBR flows that compete with BBR. (include if we find a citation). 
-%\radhika{something about not knowing how to apply policies across customers}
-%\radhika{similar issue arises with our bundler too...}.
-Thus, due to limited visibility into their customers' traffic, network operators cannot choose policies that can appease them all.\footnote{Our work focuses on public networks. The case for private WANs is different, since they are owned by a single entity, and have, thus, been successful in exploiting the benefits of scheduling~\cite{swan, b4, bwe}.} 
+% Although router vendors have, over the years, implemented certain schemes (such as strict priorities, round-robin for fair queueing, and active queue management~\cite{cisco-qos}), they are often not enabled, or used effectively, by the public network operators.\footnote{Private WANs are different, and are not the focus of our work. Being owned by the content providers themselves, they have been successful in exploiting the benefits of scheduling~\cite{swan, b4, bwe}.}  
+% This is primarily due to the challenging position of public network operators, where each of their customers may desire diverging, and often incompatible, features. While Netflix might prefer enforcing fairness across its video traffic, Amazon might prefer prioritizing its interactive web store traffic over the long-lived AWS transfers.
+% %For example, while enabling fair queueing in the routers would benefit short interactive flows competing with bulk transfers, it may penalize flows bundled within a single VPN tunnel by allocating them smaller than their fair share of bandwidth \radhika{might need to change this example}. 
+% %Similarly, while enabling an AQM scheme might reduce the queuing delay in the absence of a BBR flow, it may severely penalize non-BBR flows that compete with BBR. (include if we find a citation). 
+% %\radhika{something about not knowing how to apply policies across customers}
+% %\radhika{similar issue arises with our bundler too...}.
+% Thus, due to limited visibility into their customers' traffic, network operators cannot choose policies that can appease them all.
 
-An individual customer can, on the other hand, choose appropriate policies for the \emph{component flows} within its own traffic as per its own requirements. 
-%; that is, scheduling policy is easier to express at the edge. 
-Examples include traffic between different datacenters, campuses of an organization, collaborating institutes, a large content provider (\eg Netflix) and a network with many clients (e.g., a regional ISP), an organization using an external service (\eg Dropbox), and so on. 
-In each of these scenarios the sender has enough information to unilaterally choose a scheduling or queue management policy for its component flows (such as prioritizing flows based on applications, enforcing fair queueing, using AQM to bound delays, and so on). However, these policies are effective only when enforced on congested links in a flow's path that experience a queue build-up, and such links are often outside the control of the individual customers~\cite{inferring-interdomain-congestion}. 
+% Different content providers in the Internet might benefit from different scheduling policies. For example, Netflix might prefer enforcing fairness across its video traffic, while Amazon might prefer prioritizing its interactive web store traffic over the long-lived AWS transfers. The public network operators, however, have neither enough visibility into the  traffic to choose the desired policies, nor enough incentives to enforce them.\footnote{The case for private WANs is different, since they are owned by a single entity, and have, thus, been successful in exploiting the benefits of scheduling~\cite{swan, b4, bwe}.} \radhika{say something about deals}
 
-So while network operators do not have enough visibility into the traffic to choose an appropriate policy, the customers may not have enough control over the queued-up links in the network to enforce their desired policies. This paper takes preliminary steps towards resolving this conundrum by simply \emph{moving the queues built in the network to the customer's edge}. Our approach, thus, allows customers to effectively enforce their desired scheduling and queue management policies, across traffic that share common sender and receiver domains, by bringing the corresponding queues under their control. The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
+% An individual customer can, on the other hand, choose appropriate policies for the \emph{component flows} within its own traffic as per its own requirements. 
+% %; that is, scheduling policy is easier to express at the edge. 
+% Consider examples such as traffic between different campuses of an organization, or a large content provider (\eg Netflix) and a network with many clients (e.g., a regional ISP), or an organization using an external service (\eg Dropbox), and so on. In each of these scenarios the sender has enough information to unilaterally choose a scheduling or queue management policy for its component flows (such as prioritizing flows based on applications, enforcing fair queueing, or using AQM to bound delays). However, these policies are effective only when enforced on congested links in a flow's path that experience a queue build-up, and such links are often outside the control of the individual customers~\cite{inferring-interdomain-congestion}. 
 
-We observe that the component flows of the traffic from a given sender's domain, destined for the same downstream domain, as in the examples mentioned earlier, are likely to share common bottlenecks within the network. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
+The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the performance benefits of deploying such policies within the network. However, the Internet, at large, has been unable to enjoy these benefits. 
+
+Internet content providers (or customers) may desire different policies for their traffic, as per their requirements. For example, Netflix might benefit from doing fair queuing across its video traffic, and Amazon might want to prioritize its interactive web store traffic over the long-lived AWS transfers. However, such policies are effective only when enforced on bottleneck links that experience a queue build-up, and such links are often outside the control of individual customers~\cite{inferring-interdomain-congestion}, rendering them incapable of applying desired policies to their traffic. 
+
+Individual ISPs, on the other hand, do have control over the queued up links in their carrier networks to enforce different scheduling and queue management policies. However, they neither have enough visibility into their customer's traffic to choose desired policies, nor enough incentives to enforce them. Large customers might be able to negotiate deals with certain carriers to enforce specific policies \radhika{find cite}. However, it might not be possible to negotiate such deals with \emph{all} carriers in the traffic's path (especially a small last-mile carrier that is likely to be the bottleneck, and that may not even possess switches equipped with the desired features). Even if this was somehow made possible, the customers would have no way of knowing whether their policies were enforced as desired, and they would be left at the mercy of individual ISPs.
+%, they have no way of knowing whether it was done appropriately. 
+
+%So to summarize, while customers may not have enough control over the queued-up links in the network to effectively enforce their desired policies, the ISPs may not have enough incentives or enough visibility into the traffic to do so. 
+This paper, therefore, attempts to bring a customer's traffic under their own control by simply \emph{moving the queues built in the network to the customer's edge}. Our approach, thus, allows the customers to effectively enforce their desired scheduling and queue management policies, across traffic that share common sender and receiver domains (as described later). The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
+
+We observe that the \emph{component flows} of the traffic from a given sender's domain, destined for the same downstream domain are likely to share common bottlenecks within the network. Examples include traffic between a large content provider (\eg Amazon, Google, Dropbox etc.) and a network with many clients (e.g. an enterprise), between two different campuses of an organization, between collaborating institutes, and so on. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
 %\radhika{is the last sentence too long / hard to understand? suggestions for fixing it?} 
 
-We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of an enterprise network or a domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They thus provide an effective vantage point for aggregating and managing traffic. 
+We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of a network domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They thus provide an effective vantage point for aggregating and managing traffic. 
 
 We, therefore, propose a new type of middlebox, called a \name, that (1) aggregates the traffic at the customer's egress into appropriate bundles, (2) does rate control for each bundle to shift the corresponding queues from within the network to itself, and (3) applies scheduling and AQM policies within each bundle as per the customer's requirements. 
 
 %\radhika{add a few lines on \name's high level architecture.} 
- A \name comprises of a pair of middleboxes: a \inbox that sits at the sender's egress and a \outbox that sits at the receiver's ingress. A bundle is, thus, defined as a group of flows traversing through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox for (i) classifying the flows into appropriate bundles, and,  (ii) collecting congestion signals, such as the round-trip time, and the rate at which traffic arrives at the \outbox. These signals are used by a standard congestion control algorithm (having certain properties, as described later) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck links in the network remain fully utilized. 
+ A \name comprises of a pair of middleboxes: a \inbox that sits at the sender's egress and a \outbox that sits at the receiver's ingress. A bundle is, thus, defined as a group of flows traversing through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox for (i) classifying the flows into appropriate bundles, and,  (ii) collecting congestion signals, such as the round-trip time, and the rate at which traffic arrives at the \outbox. These signals are used by a standard congestion control algorithm (having certain properties, as described later) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck link in the network remains fully utilized. 
  
  We introduce a novel light-weight methodology for the \inbox and \outbox coordination, which does not require any per-flow state (only requiring per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our overall approach only requires introducing the \name boxes at the customer's edge, and requires no changes to the individual end-hosts (unless needed for a specific scheduling policy \eg adding priority values to packet headers) or to the routers in the network. 
  
- Notice that our goal is to only do scheduling and queue management across the traffic within the same bundle (and therefore belonging to a single customer). We do not even attempt to tackle the more ambitious objective of  scheduling traffic across different customers, which would require dealing with the potential differences in their requirements. Furthermore, as we will discuss later, there can be instances where \name fails to provide any performance benefits for the bundled traffic, and falls back to the status quo performance. Nonetheless, we believe that our work, in its simplicity, provides an \emph{immediately deployable} solution for enabling some of the benefits of scheduling and queue management in the public Internet, which is something that has been missing from the scheduling literature so far. 
+ Notice that our goal is to only do scheduling and queue management across the traffic within the same bundle (and therefore belonging to a single customer). We do not even attempt to tackle the more ambitious objective of  scheduling traffic across different customers, which would require dealing with the potential differences in their requirements. Furthermore, as we will discuss later, there can be instances where \name fails to provide any performance benefits for the bundled traffic, and falls back to the status quo performance. Nonetheless, we believe that our work, in its simplicity, provides an \emph{immediately deployable} solution for enabling some of the benefits of scheduling and queue management in the Internet, which is something that has been missing from the scheduling literature so far. 
  %\radhika{should i move it up by 2 paragraphs (i.e. right after the 3 points)?} 
 
 % We make the following key contributions:
